--- a/06-Code/PanesRumiñahui/nbproject/private/private.properties
+++ b/06-Code/PanesRumiñahui/nbproject/private/private.properties
@@ -1,8 +1,2 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
-do.jlink=false
-javac.debug=true
-javadoc.preview=true
-jlink.strip=false
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\17\\build.properties
