--- a/06-Code/PanesRumiñahui/nbproject/project.properties
+++ b/06-Code/PanesRumiñahui/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PanesRumi_ahui
 excludes=
 file.reference.gson-2.8.2.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
 file.reference.json-20220320.jar=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
+file.reference.json-20220320.jar-1=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.json-20220320.jar}
+    ${file.reference.json-20220320.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.json-20220320.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
