--- a/06-Code/PanesRumiñahui/nbproject/private/private.properties
+++ b/06-Code/PanesRumiñahui/nbproject/private/private.properties
@@ -1,2 +1,5 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.gson-2.10.1.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.10.1.jar
+file.reference.gson-2.8.2.jar-1=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
+file.reference.json-20220320.jar-1=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
