--- a/06-Code/PanesRumiñahui/nbproject/project.properties
+++ b/06-Code/PanesRumiñahui/nbproject/project.properties
@@ -36,8 +36,10 @@ excludes=
 file.reference.gson-2.10.1.jar=D:\\Downloads\\gson-2.10.1.jar
 file.reference.gson-2.8.2.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
 file.reference.gson-2.8.2.jar-1=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-2=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
 file.reference.json-20220320.jar=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
 file.reference.json-20220320.jar-1=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
+file.reference.json-20220320.jar-2=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +47,9 @@ javac.classpath=\
     ${file.reference.json-20220320.jar}:\
     ${file.reference.gson-2.8.2.jar-1}:\
     ${file.reference.json-20220320.jar-1}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.gson-2.8.2.jar-2}:\
+    ${file.reference.json-20220320.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
