--- a/06-Code/PanesRumiñahui/nbproject/project.properties
+++ b/06-Code/PanesRumiñahui/nbproject/project.properties
@@ -33,23 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PanesRumi_ahui
 excludes=
-file.reference.gson-2.10.1.jar=D:\\Downloads\\gson-2.10.1.jar
 file.reference.gson-2.8.2.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
-file.reference.gson-2.8.2.jar-1=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
-file.reference.gson-2.8.2.jar-2=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
 file.reference.json-20220320.jar=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
-file.reference.json-20220320.jar-1=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
-file.reference.json-20220320.jar-2=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.json-20220320.jar}:\
-    ${file.reference.gson-2.8.2.jar-1}:\
-    ${file.reference.json-20220320.jar-1}:\
-    ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.gson-2.8.2.jar-2}:\
-    ${file.reference.json-20220320.jar-2}
+    ${file.reference.json-20220320.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PanesRumi_ahui
-main.class=ec.edu.espe.view.panesRumi\u00f1ahui.PanesRumi\u00f1ahui
+main.class=ec.edu.espe.panesrumi\u00f1ahui.view.PanesRumi\u00f1ahui
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
