--- a/06-Code/PanesRumiñahui/nbproject/project.properties
+++ b/06-Code/PanesRumiñahui/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PanesRumi_ahui
-main.class=ec.edu.espe.panesrumi\u00f1ahui.view.PanesRumi\u00f1ahui
+main.class=ec.edu.espe.view.panesRumi\u00f1ahui.PanesRumi\u00f1ahui
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
