--- a/06-Code/PanesRumiñahui/nbproject/private/private.properties
+++ b/06-Code/PanesRumiñahui/nbproject/private/private.properties
@@ -1,4 +1,2 @@
 compile.on.save=true
-file.reference.gson-2.8.2.jar=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
-file.reference.json-20220320.jar=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
-user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\17\\build.properties
