--- a/06-Code/PanesRumiñahui/nbproject/private/private.properties
+++ b/06-Code/PanesRumiñahui/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
-file.reference.gson-2.8.2.jar=C:\\Users\\gaboa\\Documents\\POO\\gson-2.8.2.jar
-file.reference.json-20220320.jar=C:\\Users\\gaboa\\Documents\\POO\\json-20220320.jar
-user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.gson-2.8.2.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
+file.reference.json-20220320.jar=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
