--- a/06-Code/PanesRumiñahui/nbproject/private/private.properties
+++ b/06-Code/PanesRumiñahui/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.gson-2.8.2.jar=D:\\Downloads\\gson-2.10.1.jar
+file.reference.json-20220320.jar=D:\\Downloads\\json-20220320.jar
+user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
