--- a/06-Code/PanesRumiñahui/nbproject/project.properties
+++ b/06-Code/PanesRumiñahui/nbproject/project.properties
@@ -33,13 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PanesRumi_ahui
 excludes=
+file.reference.gson-2.10.1.jar=D:\\Downloads\\gson-2.10.1.jar
 file.reference.gson-2.8.2.jar=C:\\Program Files\\Java\\jdk-20\\lib\\gson-2.8.2.jar
 file.reference.json-20220320.jar=C:\\Program Files\\Java\\jdk-20\\lib\\json-20220320.jar
+file.reference.json-20220320.jar-1=D:\\Downloads\\json-20220320.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.json-20220320.jar}
+    ${file.reference.json-20220320.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.json-20220320.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
