--- a/06-Code/DesingLogIn/nbproject/private/private.properties
+++ b/06-Code/DesingLogIn/nbproject/private/private.properties
@@ -1,2 +1,12 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\17\\build.properties
+file.reference.bcrypt-0.4.1.jar=D:\\Documents\\Taller\\lib\\bcrypt-0.4.1.jar
+file.reference.bson-4.2.3.jar=D:\\Documents\\Taller\\lib\\bson-4.2.3.jar
+file.reference.bytes-0.4.6.jar=D:\\Documents\\Taller\\lib\\bytes-0.4.6.jar
+file.reference.gson-2.8.2.jar=D:\\Documents\\Taller\\lib\\gson-2.8.2.jar
+file.reference.hamcrest-core-1.3.jar=D:\\Documents\\Taller\\lib\\hamcrest-core-1.3.jar
+file.reference.jBCrypt-0.4.1.jar=D:\\Documents\\Taller\\lib\\jBCrypt-0.4.1.jar
+file.reference.json-20220320.jar=D:\\Downloads\\json-20220320.jar
+file.reference.json-simple-1.1.1.jar=D:\\Documents\\Taller\\lib\\json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=D:\\Documents\\Taller\\lib\\junit-4.12.jar
+file.reference.mongo-java-driver-3.12.14.jar=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
+user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
