--- a/06-Code/DesingLogIn/nbproject/project.properties
+++ b/06-Code/DesingLogIn/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.json-20220320.jar=lib\\json-20220320.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=lib\\junit-4.12.jar
 file.reference.mongo-java-driver-3.12.14.jar=lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongodb-driver-sync-4.10.2.jar=lib\\mongodb-driver-sync-4.10.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.mongo-java-driver-3.12.14.jar}:\
     ${file.reference.bcrypt-0.4.1.jar}:\
     ${file.reference.bytes-0.4.6.jar}:\
-    ${file.reference.jBCrypt-0.4.1.jar}
+    ${file.reference.jBCrypt-0.4.1.jar}:\
+    ${file.reference.mongodb-driver-sync-4.10.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
