--- a/06-Code/DesingLogIn/nbproject/project.properties
+++ b/06-Code/DesingLogIn/nbproject/project.properties
@@ -34,15 +34,25 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DesingLogIn
 excludes=
 file.reference.bcrypt-0.4.1.jar=lib\\bcrypt-0.4.1.jar
+file.reference.bcrypt-0.4.1.jar-1=D:\\Documents\\Taller\\lib\\bcrypt-0.4.1.jar
 file.reference.bson-4.2.3.jar=lib\\bson-4.2.3.jar
+file.reference.bson-4.2.3.jar-1=D:\\Documents\\Taller\\lib\\bson-4.2.3.jar
 file.reference.bytes-0.4.6.jar=lib\\bytes-0.4.6.jar
+file.reference.bytes-0.4.6.jar-1=D:\\Documents\\Taller\\lib\\bytes-0.4.6.jar
 file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=D:\\Documents\\Taller\\lib\\gson-2.8.2.jar
 file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-1=D:\\Documents\\Taller\\lib\\hamcrest-core-1.3.jar
 file.reference.jBCrypt-0.4.1.jar=lib\\jBCrypt-0.4.1.jar
+file.reference.jBCrypt-0.4.1.jar-1=D:\\Documents\\Taller\\lib\\jBCrypt-0.4.1.jar
 file.reference.json-20220320.jar=lib\\json-20220320.jar
+file.reference.json-20220320.jar-1=D:\\Documents\\Taller\\lib\\json-20220320.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=D:\\Documents\\Taller\\lib\\json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=lib\\junit-4.12.jar
+file.reference.junit-4.12.jar-1=D:\\Documents\\Taller\\lib\\junit-4.12.jar
 file.reference.mongo-java-driver-3.12.14.jar=lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar-1=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongodb-driver-sync-4.10.2.jar=lib\\mongodb-driver-sync-4.10.2.jar
 includes=**
 jar.compress=false
@@ -57,7 +67,17 @@ javac.classpath=\
     ${file.reference.bcrypt-0.4.1.jar}:\
     ${file.reference.bytes-0.4.6.jar}:\
     ${file.reference.jBCrypt-0.4.1.jar}:\
-    ${file.reference.mongodb-driver-sync-4.10.2.jar}
+    ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
+    ${file.reference.bcrypt-0.4.1.jar-1}:\
+    ${file.reference.bson-4.2.3.jar-1}:\
+    ${file.reference.bytes-0.4.6.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.hamcrest-core-1.3.jar-1}:\
+    ${file.reference.jBCrypt-0.4.1.jar-1}:\
+    ${file.reference.json-20220320.jar-1}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.mongo-java-driver-3.12.14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
