--- a/06-Code/DesingLogIn2/nbproject/project.properties
+++ b/06-Code/DesingLogIn2/nbproject/project.properties
@@ -35,39 +35,33 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DesingLogIn
 endorsed.classpath=
 excludes=
-file.reference.bcrypt-0.4.1.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\bcrypt-0.4.1.jar
-file.reference.bson-4.10.2.jar=C:\\Users\\gaboa\\Pictures\\lib\\lib\\bson-4.10.2.jar
-file.reference.bson-4.2.3.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\bson-4.2.3.jar
-file.reference.bson-record-codec-4.10.2.jar=C:\\Users\\gaboa\\Pictures\\lib\\lib\\bson-record-codec-4.10.2.jar
-file.reference.bytes-0.4.6.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\bytes-0.4.6.jar
-file.reference.gson-2.8.2.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\gson-2.8.2.jar
-file.reference.hamcrest-core-1.3.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\hamcrest-core-1.3.jar
-file.reference.jar_files__3_.zip=C:\\Users\\gaboa\\Pictures\\lib\\lib\\jar_files (3).zip
-file.reference.jBCrypt-0.4.1.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\jBCrypt-0.4.1.jar
-file.reference.json-20220320.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\json-20220320.jar
-file.reference.json-simple-1.1.1.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\json-simple-1.1.1.jar
-file.reference.junit-4.12.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\junit-4.12.jar
-file.reference.mongo-java-driver-3.12.14.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\mongo-java-driver-3.12.14.jar
-file.reference.mongodb-driver-core-4.10.2.jar=C:\\Users\\gaboa\\Pictures\\lib\\lib\\mongodb-driver-core-4.10.2.jar
-file.reference.mongodb-driver-sync-4.10.2.jar-1=C:\\Users\\gaboa\\Pictures\\lib\\lib\\mongodb-driver-sync-4.10.2.jar
+file.reference.bcrypt-0.4.1.jar=lib\\bcrypt-0.4.1.jar
+file.reference.bson-4.2.3.jar=lib\\bson-4.2.3.jar
+file.reference.bytes-0.4.6.jar=lib\\bytes-0.4.6.jar
+file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.jBCrypt-0.4.1.jar=lib\\jBCrypt-0.4.1.jar
+file.reference.json-20220320.jar=lib\\json-20220320.jar
+file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=lib\\junit-4.12.jar
+file.reference.mongo-java-driver-3.12.14.jar=lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongodb-driver-sync-4.10.2.jar=lib\\mongodb-driver-sync-4.10.2.jar
+file.reference.ValidationLib.jar=lib\\ValidationLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcrypt-0.4.1.jar-1}:\
-    ${file.reference.bson-4.10.2.jar}:\
-    ${file.reference.bson-4.2.3.jar-1}:\
-    ${file.reference.bson-record-codec-4.10.2.jar}:\
-    ${file.reference.bytes-0.4.6.jar-1}:\
-    ${file.reference.gson-2.8.2.jar-1}:\
-    ${file.reference.hamcrest-core-1.3.jar-1}:\
-    ${file.reference.jBCrypt-0.4.1.jar-1}:\
-    ${file.reference.jar_files__3_.zip}:\
-    ${file.reference.json-20220320.jar-1}:\
-    ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.junit-4.12.jar-1}:\
-    ${file.reference.mongo-java-driver-3.12.14.jar-1}:\
-    ${file.reference.mongodb-driver-core-4.10.2.jar}:\
-    ${file.reference.mongodb-driver-sync-4.10.2.jar-1}
+    ${file.reference.bson-4.2.3.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.json-20220320.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.mongo-java-driver-3.12.14.jar}:\
+    ${file.reference.bcrypt-0.4.1.jar}:\
+    ${file.reference.bytes-0.4.6.jar}:\
+    ${file.reference.jBCrypt-0.4.1.jar}:\
+    ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
+    ${file.reference.ValidationLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
