--- a/06-Code/DesingLogIn3/nbproject/project.properties
+++ b/06-Code/DesingLogIn3/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.bson-4.2.3.jar=lib\\bson-4.2.3.jar
 file.reference.bytes-0.4.6.jar=lib\\bytes-0.4.6.jar
 file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
 file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.itextpdf-5.5.13.3.jar=lib\\itextpdf-5.5.13.3.jar
 file.reference.jBCrypt-0.4.1.jar=lib\\jBCrypt-0.4.1.jar
 file.reference.json-20220320.jar=lib\\json-20220320.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.bytes-0.4.6.jar}:\
     ${file.reference.jBCrypt-0.4.1.jar}:\
     ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
-    ${file.reference.ValidationLib.jar}
+    ${file.reference.ValidationLib.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
