--- a/06-Code/DesingLogIn3/nbproject/private/private.properties
+++ b/06-Code/DesingLogIn3/nbproject/private/private.properties
@@ -2,20 +2,20 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.bcrypt-0.4.1.jar=D:\\Documents\\Taller\\lib\\bcrypt-0.4.1.jar
-file.reference.bson-4.2.3.jar=D:\\Documents\\Taller\\lib\\bson-4.2.3.jar
-file.reference.bytes-0.4.6.jar=D:\\Documents\\Taller\\lib\\bytes-0.4.6.jar
-file.reference.gson-2.8.2.jar=D:\\Documents\\Taller\\lib\\gson-2.8.2.jar
-file.reference.hamcrest-core-1.3.jar=D:\\Documents\\Taller\\lib\\hamcrest-core-1.3.jar
-file.reference.itextpdf-5.5.13.3.jar=D:\\Documents\\Taller\\itextpdf-5.5.13.3.jar
-file.reference.jBCrypt-0.4.1.jar=D:\\Documents\\Taller\\lib\\jBCrypt-0.4.1.jar
-file.reference.json-20220320.jar=D:\\Documents\\Taller\\lib\\json-20220320.jar
-file.reference.json-simple-1.1.1.jar=D:\\Documents\\Taller\\lib\\json-simple-1.1.1.jar
-file.reference.junit-4.12.jar=D:\\Documents\\Taller\\lib\\junit-4.12.jar
-file.reference.mongo-java-driver-3.12.14.jar=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
-file.reference.mongodb-driver-sync-4.10.2.jar=D:\\Documents\\Taller\\mongodb-driver-sync-4.10.2.jar
-file.reference.ValidationLib.jar=D:\\Documents\\Taller\\ValidationLib\\dist\\ValidationLib.jar
+file.reference.bcrypt-0.4.1.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\bcrypt-0.4.1.jar
+file.reference.bson-4.2.3.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\bson-4.2.3.jar
+file.reference.bytes-0.4.6.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\bytes-0.4.6.jar
+file.reference.gson-2.8.2.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\gson-2.8.2.jar
+file.reference.hamcrest-core-1.3.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\hamcrest-core-1.3.jar
+file.reference.itextpdf-5.5.13.3.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\itextpdf-5.5.13.3.jar
+file.reference.jBCrypt-0.4.1.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\jBCrypt-0.4.1.jar
+file.reference.json-20220320.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\json-20220320.jar
+file.reference.json-simple-1.1.1.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\junit-4.12.jar
+file.reference.mongo-java-driver-3.12.14.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongodb-driver-sync-4.10.2.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\mongodb-driver-sync-4.10.2.jar
+file.reference.ValidationLib.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\DesingLogIn3\\lib\\ValidationLib.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\18\\build.properties
