--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=DesingLogIn
+application.title=PanesDeLaRuminahuiVersionGUI
 application.vendor=usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,25 +29,25 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DesingLogIn.jar
+dist.jar=${dist.dir}/PanesDeLaRuminahuiVersionGUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DesingLogIn
+dist.jlink.output=${dist.jlink.dir}/PanesDeLaRuminahuiVersionGUI
 endorsed.classpath=
 excludes=
-file.reference.bcrypt-0.4.1.jar=lib\\bcrypt-0.4.1.jar
-file.reference.bson-4.2.3.jar=lib\\bson-4.2.3.jar
-file.reference.bytes-0.4.6.jar=lib\\bytes-0.4.6.jar
-file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
-file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
-file.reference.itextpdf-5.5.13.3.jar=lib\\itextpdf-5.5.13.3.jar
-file.reference.jBCrypt-0.4.1.jar=lib\\jBCrypt-0.4.1.jar
-file.reference.json-20220320.jar=lib\\json-20220320.jar
-file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
-file.reference.junit-4.12.jar=lib\\junit-4.12.jar
-file.reference.mongo-java-driver-3.12.14.jar=lib\\mongo-java-driver-3.12.14.jar
-file.reference.mongodb-driver-sync-4.10.2.jar=lib\\mongodb-driver-sync-4.10.2.jar
-file.reference.ValidationLib.jar=lib\\ValidationLib.jar
+file.reference.bcrypt-0.4.1.jar=lib/bcrypt-0.4.1.jar
+file.reference.bson-4.2.3.jar=lib/bson-4.2.3.jar
+file.reference.bytes-0.4.6.jar=lib/bytes-0.4.6.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.itextpdf-5.5.13.3.jar=lib/itextpdf-5.5.13.3.jar
+file.reference.jBCrypt-0.4.1.jar=lib/jBCrypt-0.4.1.jar
+file.reference.json-20220320.jar=lib/json-20220320.jar
+file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
+file.reference.mongo-java-driver-3.12.14.jar=lib/mongo-java-driver-3.12.14.jar
+file.reference.mongodb-driver-sync-4.10.2.jar=lib/mongodb-driver-sync-4.10.2.jar
+file.reference.ValidationLib.jar=lib/ValidationLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -98,7 +98,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DesingLogIn
+jlink.launcher.name=PanesDeLaRuminahuiVersionGUI
 main.class=ec.edu.espe.deinglogin.view.LoginGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
