--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /06-Code/PanesRumiñahui/dist/
 /06-Code/DesingLogIn2/dist/
+/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/
+/06-Code/PanesDeLaRuminahuiVersionGUI/build/
