--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
@@ -18,4 +18,4 @@ file.reference.ValidationLib.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRe
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
