--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.json-20220320.jar=lib/json-20220320.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 file.reference.mongo-java-driver-3.12.14.jar=lib/mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar-1=C:\\Program Files\\Java\\jdk-20\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongodb-driver-sync-4.10.2.jar=lib/mongodb-driver-sync-4.10.2.jar
 file.reference.ValidationLib.jar=lib/ValidationLib.jar
 includes=**
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.jBCrypt-0.4.1.jar}:\
     ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
     ${file.reference.ValidationLib.jar}:\
-    ${file.reference.itextpdf-5.5.13.3.jar}
+    ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.mongo-java-driver-3.12.14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
