Implment Utils to Class

--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
@@ -19,4 +19,4 @@ file.reference.ValidationLib.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRe
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
