--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
@@ -19,4 +19,4 @@ file.reference.ValidationLib.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techw
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\17\\build.properties
