--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 file.reference.mongo-java-driver-3.12.14.jar=lib/mongo-java-driver-3.12.14.jar
 file.reference.mongo-java-driver-3.12.14.jar-1=C:\\Program Files\\Java\\jdk-20\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar-2=C:\\Program Files\\Java\\jdk-20\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongodb-driver-sync-4.10.2.jar=lib/mongodb-driver-sync-4.10.2.jar
 file.reference.ValidationLib.jar=lib/ValidationLib.jar
 includes=**
@@ -65,7 +66,8 @@ javac.classpath=\
     ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
     ${file.reference.ValidationLib.jar}:\
     ${file.reference.itextpdf-5.5.13.3.jar}:\
-    ${file.reference.mongo-java-driver-3.12.14.jar-1}
+    ${file.reference.mongo-java-driver-3.12.14.jar-1}:\
+    ${file.reference.mongo-java-driver-3.12.14.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
