Main table changes and connection imrpove

--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
@@ -12,11 +12,12 @@ file.reference.jBCrypt-0.4.1.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techw
 file.reference.json-20220320.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\json-20220320.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\junit-4.12.jar
-file.reference.mongo-java-driver-3.12.14.jar=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
-file.reference.mongo-java-driver-3.12.14.jar-1=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar-1=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar-2=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongodb-driver-sync-4.10.2.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongodb-driver-sync-4.10.2.jar
 file.reference.ValidationLib.jar=C:\\Users\\gaboa\\Documents\\POO\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\ValidationLib.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\jaram\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
