Concection fixed in calss RawMaterialGUI

--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/project.properties
@@ -65,9 +65,7 @@ javac.classpath=\
     ${file.reference.jBCrypt-0.4.1.jar}:\
     ${file.reference.mongodb-driver-sync-4.10.2.jar}:\
     ${file.reference.ValidationLib.jar}:\
-    ${file.reference.itextpdf-5.5.13.3.jar}:\
-    ${file.reference.mongo-java-driver-3.12.14.jar-1}:\
-    ${file.reference.mongo-java-driver-3.12.14.jar-2}
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
