--- a/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
+++ b/06-Code/PanesDeLaRuminahuiVersionGUI/nbproject/private/private.properties
@@ -12,7 +12,7 @@ file.reference.jBCrypt-0.4.1.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRe
 file.reference.json-20220320.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\json-20220320.jar
 file.reference.json-simple-1.1.1.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\junit-4.12.jar
-file.reference.mongo-java-driver-3.12.14.jar=D:\\Documents\\Taller\\lib\\mongo-java-driver-3.12.14.jar
+file.reference.mongo-java-driver-3.12.14.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongo-java-driver-3.12.14.jar-1=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongo-java-driver-3.12.14.jar-2=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
 file.reference.mongo-java-driver-3.12.14.jar-3=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRep\\OOP9652-Techware\\06-Code\\PanesDeLaRuminahuiVersionGUI\\lib\\mongo-java-driver-3.12.14.jar
@@ -21,4 +21,4 @@ file.reference.ValidationLib.jar=D:\\UNIVERSIDAD\\2doSemestre\\POO\\CloneGrupoRe
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\gaboa\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\18\\build.properties
